# synacor-challenge

./: Cargo.toml
doc/: arch-spec  dissassemble.txt
src/: ack.rs  main.rs  mod_arith.rs  vault.rs
