[package]
name = "synacor-challenge"
version = "0.1.0"
authors = ["Greg Manning <1396183+tocklime@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.2"
num_enum = "0.4.2"
ctrlc = "3.1.3"
num = "0.2.0"
rayon = "1.3.0"
pathfinding = "2.0.3"